Wed Mar 30 22:16:35 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Added silc_utf8_str[n]casecmp into lib/silcutil/silcutf8.[ch].

	* Use silc_utf8_str[n]casecmp instead of strcmp routines
	  in library and in SILC Client when dealing with nicknames
	  and other identifier strings.  Affected file in client lib
	  and irssi.

	* Convert nickname to UTF-8 in /msg and /smsg.  Affected file
	  irssi/src/silc/core/silc-servers.c.

Wed Mar 30 10:50:02 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Fixed idcache to work with the new identifier strings.
	  Affected file lib/silccore/silcidcache.c.

	* Added UTF-8 hash and compare function for SilcHashTable.
	  Affected file lib/silcutil/silcutil.[ch].

	* Added casefolding stringprep, SILC_CASEFOLD_PREP.
	  Affected file lib/silcutil/silcstringprep.[ch].

	* Changed the identifier string handling to include the original
	  format in client, server, channel entries and normalized
	  format in cache.  Affected files in silcd/.

Tue Mar 29 16:51:35 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Added support for the new identifier strings and their
	  validity checking.  Nicknames, channel names and usernames
	  can now include practically any kind of letters and various
	  other characters.  Affected files in silcd/ and in libraries.

	  NOTE: comparing these strings should now be done with memcmp()
	  to check binary compatibility.  All these strings are normalized
	  and casing is irrelevant.

	* Added silc_identifier_check to lib/silcutil/silcstrutil.[ch]
	  as easy function for applications to check whether identifier
	  strings are valid.

Tue Mar 29 00:45:11 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Fixed SILC_STRING_LDAP_DN encoding and decoding.  Affected
	  file lib/silcutil/silcutf8.c.

	* Added SILC_STRING_UTF8_ESCAPE to lib/silcutil/silcstrutil.h.

Mon Mar 28 22:46:23 CEST 2005  Jochen Eisinger <jochen@penguin-breeder.org>

	* Make public key in getkey reply mandatory.  Affected file